--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= full_title(yield(:title)) %> </title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<title><%= full_title(yield(:title)) %></title> <meta charset="utf-8">
+<%= render 'layouts/rails_default' %>
+<%= render 'layouts/shim' %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <%= yield %>
+  <%= render 'layouts/header' %>
+
+  <div class="container">
+  <%= yield %> 
+  <%= render 'layouts/footer' %>
+  </div>
+
   </body>
 </html>
