--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,16 @@
 
-
- <h1>Sample App Ida testing</h1>
-<p>
+<div>
+    <h1>Welcome to the Sample App </h1>
+    <h2>
     This is the home page for the
-    <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> sample application.
-</p> <
+        <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> 
+    sample application.
+    </h2> 
+
+    <%=link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+
+<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"), "https://rubyonrails.org/" %>
+<%# <%= link_to image_tag("kitten.jpg", alt: "kitten image", width: "200"), "https://rubyonrails.org/" %> %>
+<%# <a href="#" class="btn btn-lg btn-primary">Sign up now!</a> %>
