--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,7 +1,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-
+$light-gray: #777;
+$gray-medium-light: #eaeaea;
 /* universal */
 body {
     padding-top: 60px;
@@ -14,10 +15,11 @@ body {
   }
   .center {
     text-align: center;
-  }
-  .center h1 {
+     h1 {
     margin-bottom: 10px;
   }
+  }
+ 
 
   /* typography */
 h1, h2, h3, h4, h5, h6 {
@@ -35,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 30px;
     text-align: center;
     font-weight: normal;
-    color: #777;
+    color: $light-gray;
 }
 p{
 font-size: 1.1em; line-height: 1.7em;
@@ -45,37 +47,42 @@ font-size: 1.1em; line-height: 1.7em;
     float: left;
     margin-right: 10px;
     font-size: 1.7em;
-    color: #fff;
+    color: $light-gray;
     text-transform: uppercase;
     letter-spacing: -1px;
     padding-top: 9px;
     font-weight: bold;
+    &:hover {
+        color: $gray-medium-light;
+        text-decoration: none;
+      }
   }
-  #logo:hover {
-    color: #fff;
-    text-decoration: none;
-  }
+  
 /* footer */
 footer {
     margin-top: 45px;
     padding-top: 5px;
     border-top: 1px solid #eaeaea;
-    color: #777;
+    color: $light-gray;
+    a {
+      color: #555;
+      &:hover {
+        color: #222;
+              }
+        }
+    small {
+      float: left;
+          }
+    ul {
+      float: right;
+      list-style: none;
+      li {
+        float: left;
+        margin-left: 15px;
+          }
+      }
+
   }
-  footer a {
-    color: #555;
-  }
-  footer a:hover {
-    color: #222;
-  }
-  footer small {
-    float: left;
-  }
-  footer ul {
-    float: right;
-    list-style: none;
-  }
-  footer ul li {
-    float: left;
-    margin-left: 15px;
-  }
+
+
+
