--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,6 +4,12 @@
 $light-gray: #777;
 $gray-medium-light: #eaeaea;
 /* universal */
+@mixin box_sizing {       
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}   
+   
 body {
     padding-top: 60px;
   }
@@ -19,6 +25,14 @@ body {
     margin-bottom: 10px;
   }
   }
+
+  /* miscellaneous */
+.debug_dump {
+  clear: both;
+  float: left;
+  margin-top: 45px;
+  @include box_sizing;
+}
  
 
   /* typography */
